renamed social icons file to sidebar

--- a/src/Components/SideBar/sidebar.scss
+++ b/src/Components/SideBar/sidebar.scss
@@ -1,6 +1,6 @@
 @import '../../color.scss';
 
-.social-container{
+.sidebar-container{
     display: flex;
     flex-direction: column;
     justify-content: center;
