improved design of projects section. Tabs have break lines, and are spaced correctly. The font-family across the app has been given a variable and is currently set to promtp

--- a/src/Components/LinkButton/LinkButton.scss
+++ b/src/Components/LinkButton/LinkButton.scss
@@ -8,7 +8,7 @@
     border-radius: 5px;
     color: $the-dot-docoration-color;
 
-    font-family: "inter";
+    font-family: $font-family;
     padding: 10px 32px;
     text-align: center;
     text-decoration: none;
