--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -47,7 +47,7 @@ ul {
     li {
         list-style: none;
         margin: 1rem;
-        font-family: 'inter';
+        font-family: $font-family;
         padding: 0%;
 
         a {
