--- a/src/Components/About/about.scss
+++ b/src/Components/About/about.scss
@@ -54,7 +54,7 @@
 
 /* ABOUT HEADER WORDING*/
 .about-section-header-wording{
-    font-family: 'Inter';
+    font-family: $font-family;
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
@@ -63,7 +63,7 @@
     color: $heading-text-colors;
 }
 .about-section-header-wording em{
-    font-family: 'Inter';
+    font-family: $font-family;
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
@@ -72,15 +72,15 @@
     color: $the-dot-docoration-color;
 }
 .about-section-left{
-    font-family: 'Inter';
+    font-family: $font-family;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 200;
     font-size: 20px;
     color: $secondary-font-color;
 
 }
 .about-section-left em{
-    font-family: 'Inter';
+    font-family: $font-family;
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
