--- a/src/Components/Contact/contact.scss
+++ b/src/Components/Contact/contact.scss
@@ -34,7 +34,7 @@
 
 /* CONTACT HEADER WORDING*/
 .contact-header-wording{
-    font-family: 'Inter';
+    font-family: $font-family;
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
@@ -43,7 +43,7 @@
     color: $heading-text-colors;
 }
 .contact-header-wording em{
-    font-family: 'Inter';
+    font-family: $font-family;
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
@@ -55,23 +55,23 @@
 /*CONTACT MAIN WORDING*/
 
 .contact-main-get-in-touch {
-    font-family: 'Inter';
+    font-family: $font-family;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 600;
     font-size: 128px;
     color: $the-dot-docoration-color;
 }
 .contact-main-get-in-touch em{
-    font-family: 'Inter';
+    font-family: $font-family;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 600;
     font-size: 128px;
     color: $heading-text-colors;
 }
 .contact-main-summary{
-    font-family: 'Inter';
+    font-family: $font-family;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 400;
     font-size: 28px;
     color: $secondary-font-color;
     margin-left: 15vw;
@@ -79,33 +79,11 @@
 }
 
 .contact-main-summary em{
-    font-family: 'Inter';
+    font-family: $font-family;
     font-style: normal;
     font-weight: 600;
     font-size: 28px;
     color: $heading-text-colors;
     
 }
-.contact-main-button {
-    background-color: $background-color;
-    border: 3px;
-    border-style: solid;
-    border-color: $heading-text-colors;
-    border-radius: 5px;
-    color: $the-dot-docoration-color;
 
-    font-family: "inter";
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 5%;
-
-    transition-duration: 0.4s;
-    cursor: pointer;
-}
-
-.contact-main-button:hover {
-    background-color: $heading-text-colors; 
-}
