--- a/src/Components/Introduction/Introduction.scss
+++ b/src/Components/Introduction/Introduction.scss
@@ -41,7 +41,7 @@
     height: 100%;
 
     .intro-main-text-hi{
-        font-family: 'Inter';
+        font-family: $font-family;
         font-style: normal;
         font-weight: 400;
         font-size: 36px;
@@ -54,9 +54,9 @@
         color:$secondary-font-color;
     }
     .intro-main-text-name{
-        font-family: 'Inter';
+        font-family: $font-family;
         font-style: normal;
-        font-weight: 700;
+        font-weight: 600;
         font-size: 128px;
         color: $the-dot-docoration-color;
 
@@ -64,9 +64,9 @@
         margin: 0px;
     }
     .intro-main-text-role {
-        font-family: 'Inter';
+        font-family: $font-family;
         font-style: normal;
-        font-weight: 700;
+        font-weight: 600;
         font-size: 96px;
         color: $secondary-font-color;
 
@@ -78,9 +78,9 @@
         font-style: normal;
     }
     .intro-main-text-summary{
-        font-family: 'Inter';
+        font-family: $font-family;
         font-style: normal;
-        font-weight: 600;
+        font-weight: 400;
         font-size: 28px;
         color: $secondary-font-color;
         width: 60%;
@@ -91,28 +91,4 @@
     }
 }
 
-/*INTRO BUTTON*/
-
-.intro-main-button {
-    background-color:$background-color;
-    border: 3px;
-    border-style: solid;
-    border-color: $heading-text-colors;
-    border-radius: 5px;
-    color: $the-dot-docoration-color;
-
-    font-family: "inter";
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin-top: 5%;
-    margin-bottom: 5%;
-
-    &:hover {
-        background-color: $heading-text-colors; 
-        transition-duration: 0.4s;
-    }
-}
 
