--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -1,6 +1,5 @@
 @import '../../color.scss';
 
-
 /*PROJECTS SECTION*/
 
 .projects-section-container{
@@ -33,8 +32,7 @@
 
 /* PROJECTS HEADER WORDING*/
 .projects-header-wording{
-    font-family: 'Inter';
-    font-style: normal;
+    font-family: $font-family;
     font-weight: 400;
     font-size: 30px;
     line-height: 44px;
@@ -42,7 +40,7 @@
     color:$heading-text-colors;
 }
 .projects-header-wording em{
-    font-family: 'Inter';
+    font-family: $font-family;
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
@@ -73,55 +71,91 @@
     height: 60vh;
     
     margin-inline: 2vw;
-    background:$project-background-color;
+    background:#233455    ;
     border-radius: 10px;
 
-    font-family: "Inter";
+    font-family: $font-family;
     color: #ffffff;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
 
-.projects-individual-image {
+.projects-individual-image-div {
     width: 100%;
-    height: 40%;
+    height: 45%;
     
     background-color: #ffffff;
     border-radius: 5px;
-    font-family: "Inter";
 }
-.projects-individual-header {
-    width: 100%;
+
+.projects-individual-header-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
     height: 10%;
     
+    padding:1rem;
+    border-bottom: 1px solid $heading-text-colors;  
+}
+.projects-individual-header-body {
     font-style: normal;
-    font-weight: 600;
-    font-size: 20px;   
+    font-weight: 400;
+    font-size: 24px; 
+}
+.projects-individual-summary-div {
+    width: 90%;
+    height: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
+    padding: 0.5rem;
+    border-bottom: 1px solid #546A93; 
 }
-.projects-individual-summary {
-    width: 100%;
-    height: 20%;
+.projects-individual-summary-body {
+    font-family: $font-family;
+    font-weight: 200;
+    font-size: 16px;
 }
-.projects-individual-icons {
-    width: 100%;
-    height: 15%;  
-    border-bottom: 1.5px solid white;
+
+.projects-individual-icons-div {
+    width: 90%;
+    height: 10%;  
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.projects-individual-actions {
-    width: 100%;
-    height: 15%;
-    
+.projects-individual-icons-body {
+    margin:10%;
+
+    font-family: $font-family;
+    font-weight: 200;
+    font-size: 16px;
+}
+.projects-individual-actions-div {
+    width: 40%;
+    height: 10%;
+    border-top: 1px solid #546A93; 
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-family: $font-family;
+    font-weight: 200;
+    font-size: 16px;
 }
 
 /* TABS BAR*/
-
-.nav {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 500;
+    #project-tab {
+    font-family: $font-family;
+    font-weight:300;
     font-size: 24px;
+}
+.projects-nav {
     line-height: 29px;
     display: flex;
     justify-content: center;
@@ -129,15 +163,17 @@
     list-style-type: none;
     padding-inline: 5%;
     margin-top: 5%;
+    cursor: pointer;
 }
 
 .active-tab {
     color: $heading-text-colors;
-    transition-duration: 0.25s;    
+    transition-duration: 0.25s;   
 }
 
+
 .tab-box{
-    border-bottom: 1px solid $the-dot-docoration-color;
+    border-bottom: 1px solid #546A93;
     margin-inline: 30vw;
     margin-bottom: 5vh;
     padding-bottom: 0;
