--- a/src/color.scss
+++ b/src/color.scss
@@ -7,4 +7,8 @@ $icon-colors: white;
 $project-background-color :#172A4E;
 $mobile-navbar-background: #e4d8d8;
 
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@100;200;300;400;500;600;700&display=swap');
+
+
+$font-family: 'prompt';
