--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -71,7 +71,8 @@
     height: 60vh;
     
     margin-inline: 2vw;
-    background:#233455    ;
+    // background:#233455;
+    background-image: linear-gradient(to bottom, #172A4E, #344D7D);
     border-radius: 10px;
 
     font-family: $font-family;
@@ -79,14 +80,6 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-}
-
-.projects-individual-image-div {
-    width: 100%;
-    height: 45%;
-    
-    background-color: #ffffff;
-    border-radius: 5px;
 }
 
 .projects-individual-header-div {
@@ -97,13 +90,25 @@
     height: 10%;
     
     padding:1rem;
-    border-bottom: 1px solid $heading-text-colors;  
 }
 .projects-individual-header-body {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px; 
+    font-weight: 300;
+    font-size: 1.3rem; 
 }
+
+.projects-individual-image-div {
+    width: 100%;
+    height: 45%;
+    
+    background-color: #ffffff;
+    // border-radius: 5px;
+}
+.projects-individual-image-body {
+    height:100%;
+    width: 100%;
+    object-fit: cover;
+}
+
 .projects-individual-summary-div {
     width: 90%;
     height: 25%;
@@ -117,10 +122,10 @@
 .projects-individual-summary-body {
     font-family: $font-family;
     font-weight: 200;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
-.projects-individual-icons-div {
+.projects-individual-tech-div {
     width: 90%;
     height: 10%;  
 
@@ -128,26 +133,32 @@
     justify-content: center;
     align-items: center;
 }
-.projects-individual-icons-body {
-    margin:10%;
+.projects-individual-tech-body {
+    margin:5%;
 
     font-family: $font-family;
     font-weight: 200;
-    font-size: 16px;
+    font-size: 1rem;
 }
 .projects-individual-actions-div {
-    width: 40%;
+    width: 30%;
     height: 10%;
     border-top: 1px solid #546A93; 
 
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-
-    font-family: $font-family;
-    font-weight: 200;
-    font-size: 16px;
+    
 }
+
+.projects-individual-tech-body-span{
+    color: $heading-text-colors;
+}
+
+.projects-individual-tech-body-span:last-child {
+    display: none;
+}
+
 
 /* TABS BAR*/
     #project-tab {
