added links to the sidebar icons so they land on their respective personal profiles. added transition animations to the buttons and tabs. trying to add a transition to the project cards. still working on it

--- a/src/Components/LinkButton/LinkButton.scss
+++ b/src/Components/LinkButton/LinkButton.scss
@@ -16,9 +16,9 @@
     font-size: 16px;
     margin-top: 5%;
     margin-bottom: 5%;
+    transition: ease-out 0.4s;
 
     &:hover {
         background-color: $heading-text-colors; 
-        transition-duration: 0.4s;
     }
 }
