--- a/src/Components/SideBar/sidebar.scss
+++ b/src/Components/SideBar/sidebar.scss
@@ -13,6 +13,9 @@
     position: sticky;
     top: 400px;
 
+        .icon-link{
+            cursor: pointer;
+        }
 
         .icon{
             color: $the-dot-docoration-color;
