--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -26,13 +26,12 @@
     color: $heading-text-colors;
     font-family: 'schoolbell';   
     cursor: pointer;
-    
+    transition: ease-out 0.4s;
+
+
     &:hover {
         color:white;
         font-size: 1.7rem;
-        transition-duration: 0.25s;
-        transition-timing-function: ease-out;
-
     }
 }
 
@@ -57,38 +56,14 @@ ul {
             min-width: 130px;
             padding: 10px 0;
             cursor: pointer;
-
+            transition: ease-out 0.1s;
+            border-bottom: 3px solid none;
+            border-bottom: 0 solid $heading-text-colors;
 
             &:hover {
                 border-bottom: 3px solid $heading-text-colors;
-                transition-duration: 0.25s;
-                transition-timing-function: ease-out;
             }
         }
-    }
-
-    .resumeLink {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-
-        a {
-            min-width: 130px;
-            padding: 10px 0;
-            border: 3px solid $heading-text-colors;
-            border-radius: 5px;
-            background-color: transparent;
-            display:block;
-            text-align: center;
-            color:$the-dot-docoration-color;
-        }
-        &:hover {
-                border-bottom: 0px  $heading-text-colors;
-                background-color: $heading-text-colors; 
-                transition-duration: 0.4s;
-                border-radius: 5px;
-            }
     }
 }
 
