--- a/src/App.scss
+++ b/src/App.scss
@@ -2,10 +2,7 @@
 
 .App {
   width: 100%;
-  height: auto;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+  display: inline-block;
   background: $background-color;
 }
 
@@ -14,4 +11,7 @@
   padding: 0;
   margin: 0;
  }
+ body {
+  overflow-x: hidden;
+}
 
