--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -177,8 +177,16 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    cursor: pointer;
+    
 
+}
+.projects-individual-actions-icon {
+    transition: ease-out 0.4s;
+
+    &:hover{
+        color: $heading-text-colors;
+        cursor: pointer;
+    }
 }
 
 .projects-individual-tech-body-span{
