added font code into app.scss to automatically resize font  depending on screensize. changed all font size px to rem

--- a/src/Components/Contact/contact.scss
+++ b/src/Components/Contact/contact.scss
@@ -36,7 +36,7 @@
     font-family: $font-family;
     font-style: normal;
     font-weight: 400;
-    font-size: 30px;
+    font-size: 1.4rem;
     line-height: 44px;
 
     color: $heading-text-colors;
@@ -45,7 +45,7 @@
     font-family: $font-family;
     font-style: normal;
     font-weight: 400;
-    font-size: 30px;
+    font-size: 1.4rem;
     line-height: 44px;
 
     color: $the-dot-docoration-color;
@@ -57,21 +57,21 @@
     font-family: $font-family;
     font-style: normal;
     font-weight: 600;
-    font-size: 128px;
+    font-size: 5rem;
     color: $the-dot-docoration-color;
 }
 .contact-main-get-in-touch em{
     font-family: $font-family;
     font-style: normal;
     font-weight: 600;
-    font-size: 128px;
+    font-size: 5rem;
     color: $heading-text-colors;
 }
 .contact-main-summary{
     font-family: $font-family;
     font-style: normal;
     font-weight: 400;
-    font-size: 28px;
+    font-size: 1.2rem;
     color: $secondary-font-color;
     margin-left: 15vw;
     margin-right: 15vw;
@@ -81,7 +81,7 @@
     font-family: $font-family;
     font-style: normal;
     font-weight: 600;
-    font-size: 28px;
+    font-size: 1.2rem;
     color: $heading-text-colors;
     
 }
