--- a/src/Components/Introduction/Introduction.scss
+++ b/src/Components/Introduction/Introduction.scss
@@ -44,7 +44,7 @@
         font-family: $font-family;
         font-style: normal;
         font-weight: 400;
-        font-size: 36px;
+        font-size: 1.6rem;
         color: $heading-text-colors;
 
         padding: 0px;
@@ -57,7 +57,7 @@
         font-family: $font-family;
         font-style: normal;
         font-weight: 600;
-        font-size: 128px;
+        font-size: 6rem;
         color: $the-dot-docoration-color;
 
         padding: 0px;
@@ -67,7 +67,7 @@
         font-family: $font-family;
         font-style: normal;
         font-weight: 600;
-        font-size: 96px;
+        font-size: 4rem;
         color: $secondary-font-color;
 
         padding: 0px;
@@ -81,7 +81,7 @@
         font-family: $font-family;
         font-style: normal;
         font-weight: 400;
-        font-size: 28px;
+        font-size: 1.3rem;
         color: $secondary-font-color;
         width: 60%;
     }
