--- a/src/Components/About/about.scss
+++ b/src/Components/About/about.scss
@@ -57,7 +57,7 @@
     font-family: $font-family;
     font-style: normal;
     font-weight: 400;
-    font-size: 30px;
+    font-size: 1.4rem;
     line-height: 44px;
 
     color: $heading-text-colors;
@@ -66,7 +66,7 @@
     font-family: $font-family;
     font-style: normal;
     font-weight: 400;
-    font-size: 30px;
+    font-size: 1.4rem;
     line-height: 44px;
 
     color: $the-dot-docoration-color;
@@ -90,6 +90,7 @@
 /*ABOUT SECTION P TAGS*/
  .about-section-summary-p {
      margin-bottom: 1rem;
+     font-size: 0.9rem;
  }
 
  /*ABOUT SECTION PROFILE IMAGE*/
