--- a/src/Components/LinkButton/LinkButton.scss
+++ b/src/Components/LinkButton/LinkButton.scss
@@ -5,7 +5,7 @@
     border: 3px;
     border-style: solid;
     border-color: $heading-text-colors;
-    border-radius: 5px;
+    border-radius: 50px;
     color: $the-dot-docoration-color;
 
     font-family: $font-family;
@@ -13,7 +13,7 @@
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 0.75rem;
     margin-top: 5%;
     margin-bottom: 5%;
     transition: ease-out 0.4s;
