--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -34,7 +34,7 @@
 .projects-header-wording{
     font-family: $font-family;
     font-weight: 400;
-    font-size: 30px;
+    font-size: 1.4rem;
     line-height: 44px;
 
     color:$heading-text-colors;
@@ -43,7 +43,7 @@
     font-family: $font-family;
     font-style: normal;
     font-weight: 400;
-    font-size: 30px;
+    font-size: 1.4rem;
     line-height: 44px;
 
     color: #ffffff;
@@ -91,20 +91,21 @@
    
 }
 .projects-individual-image-overlay {
+    bottom: 0; 
     position: absolute; 
     display: flex;
+    justify-content:  space-between;
     align-items: center;
     flex-direction: column;
 
-    border-radius: 10px;
-    bottom: 0; 
     background: rgba(0, 0, 0, 0.95); /* Black see-through */
-    color: #f1f1f1; 
-    height: 100%;
-    width: 100%;
     transition: .5s ease;
     opacity:0;
     color: white;
+    
+    border-radius: 10px;
+    height: 100%;
+    width: 100%;
 }
 
 .projects-individual-container:hover .projects-individual-image-overlay  {
@@ -130,12 +131,13 @@
 .projects-individual-summary-body {
     font-family: $font-family;
     font-weight: 200;
-    font-size: 1rem;
+    font-size: 0.8rem;
+    text-align: center;
 }
 
 .projects-individual-tech-div {
-    width: 90%;
-    height: 10%;  
+    width: 80%;
+    height: 15%;  
 
     display: flex;
     justify-content: center;
@@ -154,14 +156,13 @@
 }
 .projects-individual-actions-div {
     width: 40%;
-    height: 10%;
+    height: 20%;
     padding: 6%;
+    gap: 1rem;
     border-top: 1px solid #546A93; 
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    
-
 }
 .projects-individual-actions-icon {
     transition: ease-out 0.4s;
