--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -63,7 +63,8 @@
     height: 30vh;
     position: relative;
     margin: 1.5% 2.7%; 
-
+    min-width: 350px;
+    min-height: 200px;
 }
 
 .projects-individual-header-body {
