--- a/src/Components/SideBar/sidebar.scss
+++ b/src/Components/SideBar/sidebar.scss
@@ -30,3 +30,9 @@
 
         }
     }
+
+    @media screen and (max-width: 600px) {
+        .sidebar-container {
+          display: none;
+        }
+      }
