--- a/src/Components/Introduction/Introduction.scss
+++ b/src/Components/Introduction/Introduction.scss
@@ -6,89 +6,104 @@
     display: flex;
     flex-direction: column;
     width: 100vw;
-    height: auto;
-    margin-bottom: 5%;
-}
-
-.intro-main{
-    display: flex;
+    height: 100vh;
     align-items: center;
-    width: 100%;
-    height: 100%;
-    flex-direction: row;
-    text-align: center;
-}
-
-.intro-main-left{
-    display: flex;
     justify-content: center;
-    align-items: center;
-    text-align: left;
-    flex-direction: column;
-  
-    width: 7vw;
-    height: 100%;
+    // margin:0 5%;
 
 }
 
-.intro-main-right{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: left;
+.intro-main-text{
+    max-width: 1400px;
+}
+.intro-main-text-hi{
+    font-family: $font-family;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.5rem;
+    color: $heading-text-colors;
 
-    width: 93%;
-    height: 100%;
+    padding: 0px;
+    margin: 0px;
+}
+.intro-main-text-hi em{
+    color:$secondary-font-color;
+}
+.intro-main-text-name{
+    font-family: $font-family;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 5rem;
+    color: $the-dot-docoration-color;
 
-    .intro-main-text-hi{
-        font-family: $font-family;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 1.6rem;
-        color: $heading-text-colors;
+    padding: 0px;
+    margin: 0px;
+}
+.intro-main-text-role {
+    font-family: $font-family;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 4rem;
+    color: $secondary-font-color;
 
-        padding: 0px;
-        margin: 0px;
+    padding: 0px;
+    margin: 0px;
+}
+.intro-main-text-role em {
+    color: $heading-text-colors;
+    font-style: normal;
+}
+.intro-main-text-summary{
+    font-family: $font-family;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.2rem;
+    color: $secondary-font-color;
+    width: 60%;
+}
+.intro-main-text-summary em{
+    color: $heading-text-colors;
+    font-style: normal;
+}
+
+ @media (max-width: 481px){
+    .intro-container{
+        height: 100%;
+    }
+    .intro-main-text {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+    }
+    
+ }
+
+ @media (max-width: 481px){
+    .intro-main-text-hi {
+        margin-top: 20%;
+        font-size: 1rem;
     }
     .intro-main-text-hi em{
-        color:$secondary-font-color;
-    }
-    .intro-main-text-name{
-        font-family: $font-family;
-        font-style: normal;
-        font-weight: 600;
-        font-size: 6rem;
-        color: $the-dot-docoration-color;
-
-        padding: 0px;
-        margin: 0px;
-    }
-    .intro-main-text-role {
-        font-family: $font-family;
-        font-style: normal;
-        font-weight: 600;
-        font-size: 4rem;
-        color: $secondary-font-color;
-
-        padding: 0px;
-        margin: 0px;
-    }
-    .intro-main-text-role em {
-        color: $heading-text-colors;
-        font-style: normal;
-    }
-    .intro-main-text-summary{
-        font-family: $font-family;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 1.3rem;
-        color: $secondary-font-color;
-        width: 60%;
-    }
-    .intro-main-text-summary em{
-        color: $heading-text-colors;
-        font-style: normal;
+        font-size: 0.8rem;
     }
 }
-
+@media (max-width: 481px){
+    .intro-main-text-name {
+        font-size: 3rem;
+    }
+}
+ @media (max-width: 481px){
+    .intro-main-text-role {
+        font-size: 2rem;
+        margin-bottom: 10%;
+    }
+}
+@media (max-width: 481px){
+    .intro-main-text-summary {
+        font-size: 1rem;
+        margin-bottom: 10%;
+    }
+}
 
