--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -5,28 +5,33 @@
 .projects-section-container{
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 100vw;
     height: auto;
+    margin-top: 10vh;
+    
     
 }
 .projects-section-header {
-    width: 100vw;
+    width: 100%;
     height: 10vh;
+    max-width: 1400px;
 
     display: flex;
     align-items: center;
     text-align: left;
-    margin-left: 7vw;   
     margin-top: 10vh; 
+
 }
 
 
 .projects-section-main{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     width: 100%;
     height: auto;
+
    
 }
 
@@ -53,23 +58,27 @@
 
 .projects-individual-design{
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-wrap: wrap;   
-      
+     max-width: 1400px;
+     gap: 5%;
+     justify-content: center;
+
+    
 }
 .projects-individual-container{
-    width: 25vw;
+    width: 30%;
     height: 30vh;
     position: relative;
-    margin: 1.5% 2.7%; 
-    min-width: 350px;
+    margin: 2% 0; 
     min-height: 200px;
+
 }
+
 
 .projects-individual-header-body {
     font-weight: 300;
-    font-size: 1.3rem; 
+    font-size: 1rem; 
     font-family: $font-family;
 
     padding: 2%;
@@ -132,7 +141,7 @@
 .projects-individual-summary-body {
     font-family: $font-family;
     font-weight: 200;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     text-align: center;
 }
 
@@ -150,10 +159,9 @@
 }
 .projects-individual-tech-body {
     margin:5%;
-
     font-family: $font-family;
     font-weight: 200;
-    font-size: 0.8rem;
+    font-size: 0.6rem;
 }
 .projects-individual-actions-div {
     width: 40%;
@@ -167,6 +175,7 @@
 }
 .projects-individual-actions-icon {
     transition: ease-out 0.4s;
+    font-size: medium;
 
     &:hover{
         color: $heading-text-colors;
@@ -182,6 +191,31 @@
     display: none;
 }
 
+@media(max-width: 1023px){
+    .projects-individual-container{
+        min-width: 300px;
+    }
+}
+
+@media (max-width: 481px){
+    .projects-section-header {
+        justify-content: center;
+    }
+    .projects-header-wording {
+        font-size: 1rem;
+    }
+    .projects-header-wording em {
+        font-size: 1rem;
+    }
+    .projects-header-wording em {
+        font-size: 1rem;
+    }
+    .projects-individual-container {
+        width: 25%;
+        height: 25vh;
+        min-width: 300px;
+    }
+ }
 
 
 
