--- a/src/Components/About/about.scss
+++ b/src/Components/About/about.scss
@@ -121,6 +121,11 @@
      width: 80%;
  }
 
+ @media  (min-width:480px){
+    .about-section-container{
+        padding:0 5%;
+    }
+}
  @media (max-width: 481px){
     .about-section-header{
         justify-content: center;
@@ -133,3 +138,12 @@
         font-size: 1rem;
     }
  }
+//TABLET
+ @media (max-width: 769px){
+    .about-section-header-wording {
+        font-size: 1.2rem;
+    }
+    .about-section-header-wording em {
+        font-size: 1.2rem;
+    }
+}
