--- a/src/Components/Contact/contact.scss
+++ b/src/Components/Contact/contact.scss
@@ -11,7 +11,7 @@
 }
 
 .contact-header {
-    width: 100vw;
+    width: 100%;
     height: 10vh;
     max-width: 1400px;
 
@@ -88,9 +88,51 @@
     font-weight: 600;
     font-size: 1rem;
     color: $heading-text-colors;
-    
+ 
+}
+.contact-footer {
+    width: 90vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: aliceblue;
+    border-top: 1px solid #546A93;
+    padding: 3%;
+    margin-top: 5%;
+
+}
+.contact-footer-made-by {
+    font-family: $font-family;
+    font-weight: 200;
+    font-size: 0.7rem;
+    font-style: italic;
+    margin-bottom: 1%;
+}
+.contact-footer-icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.6rem;
+    cursor: pointer;
+}
+.contact-footer-icon-individual {
+    text-decoration: none;
+     color: inherit;
+
 }
 
+.contact-footer-resume-icon {
+    width: 1.2rem;
+    filter: brightness(0) invert(1);
+}
+//MOBILE & DESKTOP SIDE PADDING
+@media  (min-width:480px){
+    .contact-container{
+        padding:0 5%;
+    }
+}
+//MOBILE
 @media (max-width: 481px){
     .contact-header {
         justify-content: center;
@@ -114,5 +156,28 @@
     }
     .contact-main-summary em {
         font-size:0.8rem;
+    }
+}
+ //TABLET
+ @media (max-width: 769px){
+    .contact-header-wording {
+        font-size: 1.2rem;
+    }
+    .contact-header-wording em {
+        font-size: 1.2rem;
+    }
+    .contact-main-get-in-touch {
+        font-size: 3rem;
+        margin-bottom: 5%;
+    }
+    .contact-main-get-in-touch em {
+        font-size: 3rem;
+    }
+    .contact-main-summary {
+        font-size:0.9rem;
+        margin-bottom: 5%;
+    }
+    .contact-main-summary em {
+        font-size:0.9rem;
     }
 }
