--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -196,7 +196,11 @@
         min-width: 300px;
     }
 }
-
+@media  (min-width:480px){
+    .projects-section-container{
+        padding:0 5%;
+    }
+}
 @media (max-width: 481px){
     .projects-section-header {
         justify-content: center;
@@ -216,6 +220,17 @@
         min-width: 300px;
     }
  }
+
+ //TABLET
+
+ @media (max-width: 769px){
+    .projects-header-wording {
+        font-size: 1.2rem;
+    }
+    .projects-header-wording em {
+        font-size: 1.2rem;
+    }
+}
 
 
 
