--- a/src/Components/Introduction/Introduction.scss
+++ b/src/Components/Introduction/Introduction.scss
@@ -9,6 +9,7 @@
     height: 100vh;
     align-items: center;
     justify-content: center;
+    padding:0 5%
 
 }
 
@@ -64,40 +65,15 @@
     color: $heading-text-colors;
     font-style: normal;
 }
- //TABLET
-@media (max-width: 769px){
-    .intro-main-text-hi {
-        margin-top: 10%;
-        font-size: 1.4rem;
-    }
-    .intro-main-text-hi em{
-        font-size: 1.4rem;
-    }
-    .intro-main-text-name {
-        font-size: 3.5rem;
-    }
-    .intro-main-text-role {
-        font-size: 2.5rem;
-        margin-bottom: 5%;
-    }
-    .intro-main-text-summary {
-        font-size: 1.2rem;
-        margin-bottom: 5%;
-    }
-}
 
 
-//Desktop & Tablet padding
-@media  (min-width:480px){
-    .intro-container{
-        padding:0 5%;
-    }
-}
+//MEDIA QUERIES
 
 //MOBILE
  @media (max-width: 481px){
     .intro-container{
         height: 100%;
+        padding: 0%;
     }
     .intro-main-text {
         display: flex;
@@ -128,3 +104,25 @@
  }
 
 
+
+  //TABLET
+@media (max-width: 769px){
+    .intro-main-text-hi {
+        margin-top: 10%;
+        font-size: 1.4rem;
+    }
+    .intro-main-text-hi em{
+        font-size: 1.4rem;
+    }
+    .intro-main-text-name {
+        font-size: 3.5rem;
+    }
+    .intro-main-text-role {
+        font-size: 2.5rem;
+        margin-bottom: 5%;
+    }
+    .intro-main-text-summary {
+        font-size: 1.2rem;
+        margin-bottom: 5%;
+    }
+}
