--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -9,8 +9,7 @@
     width: 100vw;
     height: auto;
     margin-top: 10vh;
-    
-    
+    padding:0 5%;
 }
 .projects-section-header {
     width: 100%;
@@ -21,7 +20,6 @@
     align-items: center;
     text-align: left;
     margin-top: 10vh; 
-
 }
 
 
@@ -31,8 +29,6 @@
     align-items: center;
     width: 100%;
     height: auto;
-
-   
 }
 
 /* PROJECTS HEADER WORDING*/
@@ -41,7 +37,6 @@
     font-weight: 400;
     font-size: 1.4rem;
     line-height: 44px;
-
     color:$heading-text-colors;
 }
 .projects-header-wording em{
@@ -50,7 +45,6 @@
     font-weight: 400;
     font-size: 1.4rem;
     line-height: 44px;
-
     color: #ffffff;
 }
 
@@ -60,11 +54,9 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;   
-     max-width: 1400px;
-     gap: 5%;
-     justify-content: center;
-
-    
+    max-width: 1400px;
+    gap: 5%;
+    justify-content: center; 
 }
 .projects-individual-container{
     width: 30%;
@@ -72,7 +64,6 @@
     position: relative;
     margin: 2% 0; 
     min-height: 200px;
-
 }
 
 
@@ -191,17 +182,22 @@
     display: none;
 }
 
+
+//MEDIA QUERIES
+
+//DESKTOP
+
 @media(max-width: 1023px){
     .projects-individual-container{
         min-width: 300px;
     }
 }
-@media  (min-width:480px){
-    .projects-section-container{
-        padding:0 5%;
-    }
-}
+ //PHONE
+
 @media (max-width: 481px){
+    .projects-section-container{
+        padding:0%;
+    }
     .projects-section-header {
         justify-content: center;
     }
