--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -88,9 +88,56 @@
     object-fit:cover;
     border-radius: 10px;  
     opacity: 1;
-
-   
 }
+
+// IMAGE OVERLAY PRE CLICK
+// .projects-individual-image-title-div {
+//     position: absolute;
+//     top: 50%;
+//     left: 50%;
+//     transform: translate(-50%, -50%);
+//     background-image: linear-gradient( rgb(8, 8, 8, 0.8), rgba(255, 255, 255, 0.5));
+
+//     opacity:1;
+//     color: white;
+//     border-radius: 10px;
+//     height: 100%;
+//     width: 100%;
+// }
+// IMAGE TEXT PRE CLICK
+// .projects-individual-image-title-text {
+//     position: absolute;
+//     display: flex;
+//     justify-content:  center;
+//     top: 15%;
+//     left: 50%;
+//     transform: translate(-50%, -50%);
+//     // color: white;
+//     color: $heading-text-colors;
+//     font-family: $font-family;
+//     font-size: 1rem;
+//     width: 100%;
+// }
+
+// IMAGE TEXT AND LINER OVERLAY PRE CLICK
+// .projects-individual-image-title-text {
+//     position: absolute;
+//     display: flex;
+//     justify-content: center;
+//     top: 0; 
+//     text-align: start;
+    
+//     // color: white;
+//     color: white;
+//     font-family: $font-family;
+//     font-size: 1rem;
+//     padding-top: 0.5rem;
+//     width: 100%;
+//     height: 40%;
+//     border-radius: 10px;  
+//     background-image: linear-gradient( rgb(8, 8, 8, 1), rgba(255, 255, 255, 0));
+// }
+
 .projects-individual-image-overlay {
     bottom: 0; 
     position: absolute; 
