--- a/src/Components/Contact/contact.scss
+++ b/src/Components/Contact/contact.scss
@@ -115,7 +115,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 0.6rem;
+    margin-top: 0.3rem;
+    gap: 0.8rem;
     cursor: pointer;
 }
 
