improved the about content further. Added the tech section to the right column

--- a/src/Components/About/about.scss
+++ b/src/Components/About/about.scss
@@ -49,6 +49,7 @@
 
 .about-section-right{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -56,6 +57,12 @@
     width: 50%;
     height: 100%;
     min-width: 400px;
+
+    font-family: $font-family;
+    font-style: normal;
+    font-weight: 200;
+    font-size: 20px;
+    color: $secondary-font-color;
 }
 
 /* ABOUT HEADER WORDING*/
@@ -103,13 +110,14 @@
     margin-bottom: 1.1rem;
     font-size: 0.8rem;
     font-weight: 300;
+    color: $the-dot-docoration-color;
 }
 
 
  /*ABOUT SECTION PROFILE IMAGE*/
 
  .about-section-profile-photo{
-     width: 80%;
+     width: 70%;
  }
 
 
@@ -173,7 +181,7 @@
         font-size: 1.2rem;
     }
     .about-section-main {
-        flex-direction: column-reverse;
+        flex-direction: column;
       }
     .about-section-header-wording em {
         font-size: 1.2rem;
