--- a/src/Components/About/about.scss
+++ b/src/Components/About/about.scss
@@ -26,7 +26,6 @@
 }
 .about-section-main{
     display: flex;
-    align-items: center;
     width: 100%;
     height: 100%;
     flex-direction: row;
@@ -50,7 +49,7 @@
 .about-section-right{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     text-align: center;
 
@@ -117,7 +116,9 @@
  /*ABOUT SECTION PROFILE IMAGE*/
 
  .about-section-profile-photo{
-     width: 70%;
+     width: 60%;
+     clip-path: circle();
+     margin-bottom: 10%;
  }
 
 
