added section hr lines for each section

--- a/src/Components/About/about.scss
+++ b/src/Components/About/about.scss
@@ -74,15 +74,14 @@
 
     color: $heading-text-colors;
 }
-.about-section-header-wording em{
-    font-family: $font-family;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 1.4rem;
-    line-height: 44px;
+.about-section-header-wording-line{
+    border-top: 1px solid #546A93;
+    opacity: 0.3;
+    margin-left: 2%;
+    width: 80%;
 
-    color: $the-dot-docoration-color;
 }
+
 .about-section-left{
     font-family: $font-family;
     font-style: normal;
