--- a/src/Components/Contact/contact.scss
+++ b/src/Components/Contact/contact.scss
@@ -45,14 +45,11 @@
 
     color: $heading-text-colors;
 }
-.contact-header-wording em{
-    font-family: $font-family;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 1.5rem;
-    line-height: 44px;
-
-    color: $the-dot-docoration-color;
+.contact-header-wording-line{
+    border-top: 1px solid #546A93;
+    opacity: 0.3;
+    margin-left: 2%;
+    width: 80%;
 }
 
 /*CONTACT MAIN WORDING*/
